--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+
+    <item
+        android:id="@+id/search_menu"
+        android:icon="@drawable/ic_search_24"
+        android:title="search"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/delete_menu"
         android:icon="@drawable/ic_delete_24"
