--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,4 +26,16 @@
             android:name="cartId"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/newProductFragment"
+        android:name="br.com.iesb.comprarei.view.fragments.NewProductFragment"
+        android:label="fragment_new_product"
+        tools:layout="@layout/bottom_sheet_new_product" >
+        <argument
+            android:name="cartId"
+            app:argType="string" />
+        <argument
+            android:name="productId"
+            app:argType="string" />
+    </fragment>
 </navigation>
