--- a/app/src/main/res/layout/bottom_sheet_item_rv.xml
+++ b/app/src/main/res/layout/bottom_sheet_item_rv.xml
@@ -6,10 +6,9 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/filter_item"
+        android:id="@+id/filterItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/green_dark"
         android:textSize="16sp"
         android:padding="12dp"
         tools:text="Name"/>
