--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="6dp"
     app:cardElevation="5dp"
@@ -20,19 +21,17 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_margin="12dp"
-            android:textColor="@color/green_dark"
             android:textSize="24sp"
-            android:text="Compras"/>
+            tools:text="Cart"/>
 
         <TextView
-            android:id="@+id/cart_date"
+            android:id="@+id/cartDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/cart_name"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="12dp"
-            android:layout_below="@id/cart_name"
-            android:textColor="@color/green_dark"
-            android:text="10/10/2010"/>
+            tools:text="10/10/2010" />
 
         <CheckBox
             android:id="@+id/check_for_delete"
@@ -40,20 +39,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:visibility="gone"/>
+            android:visibility="invisible"/>
 
-<!--        <TextView
+        <TextView
+            android:id="@+id/total_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_below="@id/cart_name"
-            android:layout_marginEnd="12dp"
-            android:text="R$ 100,00"/>-->
-
-
-
+            android:layout_toStartOf="@+id/check_for_delete"
+            tools:text="R$ 100,00" />
     </RelativeLayout>
-
-
-
 </androidx.cardview.widget.CardView>
