--- a/app/src/main/res/layout/empty_list.xml
+++ b/app/src/main/res/layout/empty_list.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toBottomOf="@id/image_cart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Ops, nothing here yet..."/>
+        android:text="@string/empty_list_message"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
