--- a/app/src/main/res/layout/fragment_new_cart.xml
+++ b/app/src/main/res/layout/fragment_new_cart.xml
@@ -1,81 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.fragments.NewCartFragment">
 
-    <TextView
-        android:id="@+id/dialog_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:textSize="24sp"
-        android:textColor="@color/green_dark"
-        android:text="New cart"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/cart_name_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <DatePicker
+        android:id="@+id/date_picker"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
-        android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="12dp"
-        app:boxStrokeErrorColor="@color/green_dark"
-        app:layout_constraintStart_toStartOf="@id/dialog_title"
-        app:layout_constraintTop_toBottomOf="@id/dialog_title">
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:theme="@style/MyTimePickerDialogTheme"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/cart_name"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/new_cart_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/dialog_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:text="@string/new_cart"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/cart_name_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="8dp"
+            app:boxStrokeErrorColor="@color/green_dark"
+            app:endIconMode="clear_text"
+            app:layout_constraintStart_toStartOf="@id/dialog_title"
+            app:layout_constraintTop_toBottomOf="@id/dialog_title">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/cart_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/name" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/cart_date_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="12dp"
-        app:layout_constraintStart_toStartOf="@id/cart_name_layout"
-        app:layout_constraintTop_toBottomOf="@id/cart_name_layout">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/cart_date"
-            android:inputType="date"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/cart_date_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Date (dd/mm/yyyy)" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="8dp"
+            app:endIconDrawable="@drawable/ic_baseline_date_range_24"
+            app:endIconMode="custom"
+            app:layout_constraintStart_toStartOf="@id/cart_name_layout"
+            app:layout_constraintTop_toBottomOf="@id/cart_name_layout">
 
-    <Button
-        android:id="@+id/btn_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/gray"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
-        android:text="Cancelar"
-        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
-        app:layout_constraintTop_toBottomOf="@+id/cart_date_layout" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/cartDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/date_dd_mm_yyyy"
+                android:inputType="date"
 
-    <Button
-        android:id="@+id/btn_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
-        app:layout_constraintEnd_toEndOf="@id/cart_date_layout"/>
+                android:maxLength="10" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:backgroundTint="@color/gray"
+            android:text="@string/cancel"
+            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
+            app:layout_constraintTop_toBottomOf="@+id/cart_date_layout" />
+
+        <Button
+            android:id="@+id/btn_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:text="@string/save"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
+            app:layout_constraintEnd_toEndOf="@id/cart_date_layout" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
