--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,19 +7,29 @@
     <item
         android:id="@+id/search_menu"
         android:icon="@drawable/ic_search_24"
-        android:title="search"
+        android:title="@string/search"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/delete_menu"
         android:icon="@drawable/ic_delete_24"
-        android:title="Delete"
+        android:title="@string/delete"
         app:showAsAction="ifRoom"/>
+
 
     <item
         android:id="@+id/sort_menu"
         android:icon="@drawable/ic_filter_list_24"
-        android:title="Sort"
+        android:title="@string/sort"
         app:showAsAction="ifRoom"/>
+
+
+    <item
+        android:id="@+id/share_menu"
+        android:icon="@drawable/ic_share_24"
+        android:title="@string/share"
+        app:showAsAction="ifRoom"/>
+
+
 
 </menu>
