--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#226327</color>
@@ -12,4 +10,5 @@
     <color name="white_green">#4DDCE3DD</color>
     <color name="green_dark">#003800</color>
     <color name="gray">#7A807B</color>
+    <color name="dark_gray">#333333</color>
 </resources>
