--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,5 +5,17 @@
         <item name="android:windowSoftInputMode">adjustResize|stateVisible</item>
     </style>
 
+    <style name="MyTimePickerDialogTheme" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">@color/green_dark</item>
+        <item name="colorAccent">@color/green_dark</item>
+    </style>
+
+    <style name="MyInputTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="colorAccent">@color/green_dark</item>
+        <item name="prefixTextColor">@color/green_light</item>
+        <item name="android:textColorHint">@color/green_dark</item>
+        <item name="colorControlActivated">@color/green_dark</item>
+    </style>
+
 
 </resources>
