Empty quantity and valor is now permitted, this will save product as a list.
If valor or quantity is more then 0, user is now obligated to set value and quantity.

--- a/app/src/main/res/layout/empty_list.xml
+++ b/app/src/main/res/layout/empty_list.xml
@@ -8,7 +8,11 @@
         android:id="@+id/image_cart"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/undraw_empty_cart_co35"
+        android:src="@drawable/ic_baseline_shopping_cart_24"
+        app:tint="@color/green_light"
+        android:scaleX="1"
+        android:scaleY="1"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
