--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/app_name"
-        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
+        style="@style/Widget.MaterialComponents.Toolbar.Primary"
         android:background="@color/green_dark"
         app:titleTextColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +37,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/product_item"
-        android:background="@color/white_green"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/search_view"
         app:layout_constraintBottom_toTopOf="@id/cart_summary"
@@ -47,7 +46,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cart_summary"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         app:cardBackgroundColor="@color/green_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="6dp"
                 tools:text="R$ 0,00"
                 android:textColor="@color/white"
                 android:textSize="32sp"
@@ -96,11 +95,12 @@
         android:id="@+id/newProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="65dp"
+        android:minHeight="48dp"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
         app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -112,8 +112,8 @@
         app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"/>
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="65dp"/>
 
     <include
         layout="@layout/empty_list"
