--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.AppCompat.Starting" parent="Theme.SplashScreen">
+    <style name="Theme.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/dark_gray</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_comprarei_foreground</item>
         <item name="postSplashScreenTheme">@style/Theme.Comprarei</item>
