--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -28,6 +28,7 @@
         android:id="@+id/share_menu"
         android:icon="@drawable/ic_share_24"
         android:title="@string/share"
+        android:visible="false"
         app:showAsAction="ifRoom"/>
 
 
