--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -38,15 +38,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:visibility="invisible"/>
+            android:layout_margin="6dp"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
         <TextView
             android:id="@+id/total_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/cart_name"
-            android:layout_toStartOf="@+id/check_for_delete"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="12dp"
             tools:text="R$ 100,00" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
