--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -47,6 +47,7 @@
         android:id="@+id/cart_summary"
         android:layout_width="match_parent"
         android:layout_height="90dp"
+        app:cardCornerRadius="0dp"
         app:cardBackgroundColor="@color/green_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +96,7 @@
         android:id="@+id/newProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="65dp"
         android:minHeight="48dp"
         android:src="@drawable/ic_add"
