--- a/app/src/main/res/menu-night/menu.xml
+++ b/app/src/main/res/menu-night/menu.xml
@@ -30,7 +30,7 @@
 
     <item
         android:id="@+id/night_mode"
-        android:title="Night mode"
-        android:icon="@drawable/ic_baseline_light_24"
+        android:title="@string/night_mode"
+        android:icon="@drawable/ic_baseline_nights_stay_24"
         app:showAsAction="ifRoom"/>
 </menu>
