--- a/app/src/main/res/values-notnight/styles.xml
+++ b/app/src/main/res/values-notnight/styles.xml
@@ -5,17 +5,19 @@
         <item name="android:windowSoftInputMode">adjustResize|stateVisible</item>
     </style>
 
-    <style name="MyTimePickerDialogTheme" parent="@style/Theme.AppCompat.Light.Dialog">
-        <item name="android:textColor">@color/green_dark</item>
-        <item name="colorAccent">@color/green_dark</item>
-    </style>
-
     <style name="MyInputTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="colorAccent">@color/green_dark</item>
         <item name="prefixTextColor">@color/green_light</item>
-        <item name="android:textColorHint">@color/green_dark</item>
-        <item name="colorControlActivated">@color/green_dark</item>
+        <item name="hintTextColor">@color/green_dark</item>
+        <item name="placeholderTextColor">@color/green_dark</item>
+        <item name="boxStrokeColor">@color/green_dark</item>
     </style>
 
+    <style name="MyCancelButtonStyle" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textColor">@color/gray</item>
+    </style>
 
+    <style name="MyOkButtonStyle" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textColor">@color/green_dark</item>
+    </style>
 </resources>
