--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,56 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="6dp"
-    app:cardElevation="5dp"
-    app:cardCornerRadius="5dp"
-    app:cardPreventCornerOverlap="true">
+    android:layout_width="match_parent">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/selected_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:background="@color/green_light_transparent"
+        android:alpha="0.5"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
-            android:id="@+id/cart_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="12dp"
-            android:textSize="24sp"
-            tools:text="Cart"/>
+    <TextView
+        android:id="@+id/cart_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="16dp"
+        tools:text="Cart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/cartDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cart_name"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="12dp"
-            tools:text="10/10/2010" />
+    <CheckBox
+        android:id="@+id/check_for_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <CheckBox
-            android:id="@+id/check_for_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="6dp"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:visibility="gone"
-            tools:visibility="visible"/>
+    <TextView
+        android:id="@+id/cartDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        tools:text="10/10/2010"
+        app:layout_constraintStart_toStartOf="@id/cart_name"
+        app:layout_constraintTop_toBottomOf="@id/cart_name"/>
 
-        <TextView
-            android:id="@+id/total_cart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cart_name"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="12dp"
-            tools:text="R$ 100,00" />
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/total_cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cart_name"
+        android:layout_marginEnd="16dp"
+        tools:text="R$ 100,00"
+        app:layout_constraintEnd_toEndOf="@id/check_for_delete"
+        app:layout_constraintBottom_toBottomOf="@id/cartDate"/>
+
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintStart_toStartOf="@id/cartDate"
+        app:layout_constraintTop_toBottomOf="@id/cartDate"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
